--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.9"
 services:
 
   homeapp:
-    build: ./homeapp
+    build: .
     container_name: homeapp-frontend
     ports:
       - "3002:3002"
