--- a/GroceryAppBe/Dockerfile
+++ b/GroceryAppBe/Dockerfile
@@ -1,12 +1,20 @@
-FROM node:18-alpine
+# Use official Node.js LTS image
+FROM node:20
 
+# Set working directory
 WORKDIR /app
 
+# Copy package.json and package-lock.json
 COPY package*.json ./
-RUN npm install --production
 
+# Install dependencies
+RUN npm install
+
+# Copy the rest of the backend code
 COPY . .
 
+# Expose port (same as backend server)
 EXPOSE 5000
 
-CMD ["npm", "start"]
+# Start the server
+CMD ["node", "server.js"]
