--- a/GroceryAppBe/Dockerfile
+++ b/GroceryAppBe/Dockerfile
@@ -1,20 +1,21 @@
 # Use official Node.js LTS image
 FROM node:20
 
-# Set working directory
+# Set working directory inside container
 WORKDIR /app
 
-# Copy package.json and package-lock.json
+# Copy package.json and package-lock.json first for caching
 COPY package*.json ./
 
 # Install dependencies
 RUN npm install
+RUN npm install -g pm2
 
-# Copy the rest of the backend code
+# Copy the rest of the application code
 COPY . .
 
-# Expose port (same as backend server)
+# Expose the port your app runs on
 EXPOSE 5000
 
-# Start the server
-CMD ["node", "server.js"]
+# Start the app using pm2
+CMD ["pm2-runtime", "server.js", "--name", "grocery-backend"]
