--- a/TodosFe/Dockerfile
+++ b/TodosFe/Dockerfile
@@ -12,4 +12,4 @@ RUN npm run build
 
 EXPOSE 3001
 
-CMD ["pm2-runtime", "serve", "build", "3001", "--name", "todos-frontend" "--spa"]
+CMD ["pm2-runtime", "serve", "build", "3001", "--name", "todos-frontend", "--spa"]
