--- a/TodosFe/Dockerfile
+++ b/TodosFe/Dockerfile
@@ -11,4 +11,4 @@ RUN npm run build
 
 EXPOSE 3001
 
-CMD ["pm2-runtime", "serve", "build", "3001", "--name", "todos-frontend", "--spa"]
+CMD ["pm2-runtime", "serve", "build/", "3001", "--name", "todos-frontend", "--spa"]
