--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,46 +1,10 @@
+version: "3.9"
+
 services:
-  grocery-backend:
-    build: ./GroceryAppBe
-    container_name: grocery-backend
-    env_file:
-      - ./GroceryAppBe/.env
-    ports:
-      - "5000:5000"
-    restart: unless-stopped
-
-  todos-backend:
-    build: ./TodosBe
-    container_name: todos-backend
-    env_file:
-      - ./TodosBe/.env
-    ports:
-      - "5001:5000"
-    restart: unless-stopped
-
-  grocery-frontend:
-    build:
-      context: ./GroceryAppFe
-      dockerfile: Dockerfile
-    ports:
-      - "3000:3000"
-    env_file:
-      - ./GroceryAppFe/.env
-    restart: unless-stopped
-
-  todos-frontend:
-    build:
-      context: ./TodosFe
-      dockerfile: Dockerfile
-    ports:
-      - "3001:3001"
-    env_file:
-      - ./TodosFe/.env
-    restart: unless-stopped
-
   homeapp-frontend:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
+    image: homeapp-frontend
+    container_name: homeapp-frontend
     ports:
       - "3002:3002"
-    restart: unless-stopped
+    restart: always
