--- a/GroceryAppBe/package.json
+++ b/GroceryAppBe/package.json
@@ -1,31 +1,14 @@
 {
-  "name": "grocerybe",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "mongoose": "^8.10.1"
-  }
-}
-{
-  "name": "node-pm2-app",
+  "name": "backend-app",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "pm2-runtime server.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.19.2",
+    "express": "^4.18.2",
     "mongoose": "^8.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.0"
+    "dotenv": "^16.3.1"
   }
 }
