--- a/TodosBe/package.json
+++ b/TodosBe/package.json
@@ -1,19 +1,14 @@
 {
-  "name": "backend",
+  "name": "backend-app",
   "version": "1.0.0",
-  "type": "module",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
   "dependencies": {
+    "express": "^4.18.2",
+    "mongoose": "^8.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "mongoose": "^8.13.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.0"
+    "dotenv": "^16.3.1"
   }
 }
