--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,52 @@
 services:
   homeapp-fe:
     build: .
+    image: homeapp-fe:latest
     container_name: homeapp-fe
     ports:
       - "3002:80"
     restart: unless-stopped
 
-  GroceryAppBe:
+  groceryapp-be:
     build: ./GroceryAppBe
+    image: groceryapp-be:latest
     container_name: groceryapp-be
     env_file:
       - ./GroceryAppBe/.env
     ports:
       - "5000:5000"
+    restart: unless-stopped
 
-  GroceryAppFe:
+  groceryapp-fe:
     build: ./GroceryAppFe
+    image: groceryapp-fe:latest
     container_name: groceryapp-fe
     env_file:
       - ./GroceryAppFe/.env
     ports:
       - "3000:80"
     depends_on:
-      - GroceryAppBe
+      - groceryapp-be
+    restart: unless-stopped
 
-  TodosBe:
+  todos-be:
     build: ./TodosBe
+    image: todos-be:latest
     container_name: todos-be
     env_file:
       - ./TodosBe/.env
     ports:
       - "5001:5000"
+    restart: unless-stopped
 
-  TodosFe:
+  todos-fe:
     build: ./TodosFe
+    image: todos-fe:latest
     container_name: todos-fe
     env_file:
       - ./TodosFe/.env
     ports:
       - "3001:80"
     depends_on:
-      - TodosBe
+      - todos-be
+    restart: unless-stopped
