--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,3 +50,11 @@ services:
     depends_on:
       - todos-be
     restart: unless-stopped
+  mongo:
+      image: mongo:6
+      container_name: mongo
+      ports:
+        - "27017:27017"
+      volumes:
+        - mongo-data:/data/db
+      restart: unless-stopped
