--- a/GroceryAppBe/package.json
+++ b/GroceryAppBe/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "backend-app",
-  "version": "1.0.0",
-  "main": "server.js",
+  "name": "groceryapp-be",
+  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^8.0.0",
+    "mongoose": "^7.6.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.4.0"
   }
 }
