--- a/TodosBe/package.json
+++ b/TodosBe/package.json
@@ -1,17 +1,13 @@
 {
-  "name": "todos-fe",
-  "version": "1.0.0",
-  "private": true,
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "axios": "^1.5.0",
-    "react-router-dom": "^6.16.0",
-    "web-vitals": "^2.1.4"
-  },
+  "name": "todosapp-be",
+  "type": "module",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build"
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "mongoose": "^7.6.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.0"
   }
 }
