--- a/k8s/todosbe_deployment.yml
+++ b/k8s/todosbe_deployment.yml
@@ -19,7 +19,7 @@ spec:
         - containerPort: 5001
         env:
           - name: MONGO_URI
-            value: mongodb://mongo:27017/todosdb
+            value: mongodb://54.163.29.81:27017/todosdb
           - name: PORT
             value: "5001"
 
@@ -34,5 +34,5 @@ spec:
   selector:
     app: todos-backend
   ports:
-  - port: 5001
+  - port: 80
     targetPort: 5001
