--- a/k8s/ingress.yml
+++ b/k8s/ingress.yml
@@ -7,6 +7,7 @@ metadata:
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
 spec:
+  ingressClassName: alb
   rules:
     - http:
         paths:
@@ -14,7 +15,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: grocery-frontend
+                name: grocery-frontend-svc
                 port:
                   number: 80
 
@@ -23,7 +24,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: homeapp-frontend
+                name: homeapp-frontend-svc
                 port:
                   number: 80
 
@@ -31,6 +32,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: todos-frontend
+                name: todos-frontend-svc
                 port:
                   number: 80
