--- a/k8s/todosbe_deployment.yml
+++ b/k8s/todosbe_deployment.yml
@@ -18,10 +18,18 @@ spec:
         ports:
         - containerPort: 5001
         env:
-          - name: MONGO_URI
-            value: mongodb://todos-backend-svc:27017/todosdb
-          - name: PORT
-            value: "5001"
+        - name: MONGO_URI
+          value: mongodb://mongo-svc:27017/todosdb
+        - name: PORT
+          value: "5001"
+        resources:
+          requests:
+            memory: "256Mi"
+            cpu: "250m"
+          limits:
+            memory: "512Mi"
+            cpu: "500m"
+
 
 ---
 
