--- a/k8s/todosfe_deployment.yml
+++ b/k8s/todosfe_deployment.yml
@@ -16,10 +16,17 @@ spec:
       - name: todos-frontend
         image: akashbora02/todos-frontend:latest
         ports:
-        - containerPort: 80
+        - containerPort: 3001
         env:
           - name: REACT_APP_API_BASE_URL
-            value: http://todos-backend-svc:5001
+            value: /api/todos
+        resources:
+          requests:
+            memory: "128Mi"
+            cpu: "100m"
+          limits:
+            memory: "256Mi"
+            cpu: "500m"
 
 ---
 
@@ -33,4 +40,4 @@ spec:
     app: todos-frontend
   ports:
   - port: 80
-    targetPort: 80
+    targetPort: 3001
