--- a/k8s/ingress.yml
+++ b/k8s/ingress.yml
@@ -3,6 +3,7 @@ kind: Ingress
 metadata:
   name: path-ingress
   annotations:
+    kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
@@ -50,4 +51,3 @@ spec:
             name: homeapp-frontend-svc
             port:
               number: 80
-              
